[SSO]: Initial Integration
SUPPORTED PLATFORMS:
 - FACEBOOK
 - FITBIT
 - GITHUB
 - GITLAB
 - GOOGLE
 - KAKAO
 - LINE
 - LINKEDIN
 - MICROSOFT
 - NAVER
 - NOTION
 - TWITTER
 - YANDEX

API:
 - /{platform}/{operation}
   - platform = name of the platform
   - operation = login, register, attach
 - /{platform}/{operation}/callback
   - callback process after authorization (can be used as redirect uri)
 - /attach
   - manually attach platform
 - /detach
   - manually detach platform
