# jaclang_jaseci/models/ephemerals.py
@@ -14,3 +14,17 @@ class UserVerification(BaseModel):
     """User Verification Request Model."""
 
     code: str
+
+
+class AttachSSO(BaseModel):
+    """Attach SSO Request Model."""
+
+    platform: str
+    id: str
+    email: str
+
+
+class DetachSSO(BaseModel):
+    """Attach SSO Request Model."""
+
+    platform: str
